@@ -3,30 +3,31 @@ package org.leo.ai.service;
 import org.leo.core.config.LeoConfig;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.yaml.snakeyaml.LoaderOptions;
-import org.yaml.snakeyaml.Yaml;
-import org.yaml.snakeyaml.constructor.SafeConstructor;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 /**
- * Skill 注册表：从 VFS/skills/ 动态读取 skill 列表和内容，带 TTL 缓存。
+ * 文件型 Skill Catalog。
  *
- * <p>缓存设计：每个 scope 独立缓存条目（ConcurrentHashMap），整体过期时间共用一个
- * AtomicLong 时间戳。调用 {@link #invalidate()} 后下次读取强制重新扫描目录。
- *
- * <p>frontmatter 解析使用 SnakeYAML，与 Spring Boot 内置版本一致，无需额外依赖。
+ * <p>物理目录保持 {@code skills/{scope}/{name}}；每个目录必须同时包含符合规范的
+ * {@code SKILL.md} 和 {@code manifest.yaml}。无效项会出现在管理列表和健康检查中，
+ * 但不会进入 system prompt，也不能通过 {@code activate_skill} 激活。
  */
 @Service
 public class SkillRegistryService {
@@ -34,249 +35,122 @@ public class SkillRegistryService {
     private static final Logger log = LoggerFactory.getLogger(SkillRegistryService.class);
 
     public static final String SCOPE_PUPPET_NODE = "puppet-node";
-    public static final String SCOPE_PLATFORM    = "platform";
-
-    /**
-     * 允许的 scope 白名单。所有读取/写入 path 之前必须先通过 {@link #validateScope(String)}，
-     * 防止 {@code scope="../foo"} 这类路径遍历攻击。
-     */
+    public static final String SCOPE_PLATFORM = "platform";
     public static final Set<String> ALLOWED_SCOPES = Set.of(SCOPE_PUPPET_NODE, SCOPE_PLATFORM);
 
-    private static final String SKILLS_DIR  = "skills";
-    private static final String SKILL_FILE  = "SKILL.md";
-    private static final long   TTL_MS      = 30_000L;
+    private static final String SKILLS_DIR = "skills";
+    private static final long TTL_MS = 30_000L;
+    private static final Pattern SKILL_NAME_PATTERN =
+            Pattern.compile("[a-z0-9][a-z0-9-]{0,63}");
 
-    /** scope → SkillMeta 列表缓存 */
+    private final SkillManifestService manifestService;
     private final ConcurrentHashMap<String, List<SkillMeta>> metaCache = new ConcurrentHashMap<>();
-    /** 上次缓存填充时间（ms），0 表示需要刷新 */
+    private final ConcurrentHashMap<String, List<SkillInspection>> inspectionCache = new ConcurrentHashMap<>();
     private final AtomicLong cacheFilledAt = new AtomicLong(0L);
-    /** 仅用于串行化 refreshIfStale，避免多线程同时扫盘 */
     private final Object refreshLock = new Object();
 
-    // ── 公开 API ──────────────────────────────────────────────────────────────
+    @Autowired
+    public SkillRegistryService(SkillManifestService manifestService) {
+        this.manifestService = manifestService;
+    }
 
-    /**
-     * 列出指定 scope 下所有 skill 的元数据（name + description + tags）。
-     * 结果按 skill 目录名排序。缓存 30s，保存/删除后自动失效。
-     * <p><b>仅返回 enabled=true 的 skill</b>，供 AI system prompt 使用。
-     *
-     * @param scope "puppet-node" 或 "platform"
-     */
+    /** 测试和非 Spring 使用场景。 */
+    public SkillRegistryService() {
+        this(new SkillManifestService());
+    }
+
+    /** 仅列出严格校验通过、已发布且启用的 skill，供 AI 运行时使用。 */
     public List<SkillMeta> listSkills(String scope) {
-        if (!isAllowedScope(scope)) return Collections.emptyList();
+        if (!isAllowedScope(scope)) return List.of();
         refreshIfStale();
-        return metaCache.getOrDefault(scope, Collections.emptyList())
-                .stream().filter(SkillMeta::isEnabled).toList();
+        return metaCache.getOrDefault(scope, List.of()).stream()
+                .filter(SkillMeta::isRuntimeEligible)
+                .toList();
     }
 
-    /**
-     * 列出指定 scope 下所有 skill（含禁用项），供管理 UI 使用。
-     *
-     * @param scope "puppet-node" 或 "platform"
-     */
+    /** 列出管理目录中的全部 skill，包括禁用、草稿和无效项。 */
     public List<SkillMeta> listAllSkills(String scope) {
-        if (!isAllowedScope(scope)) return Collections.emptyList();
+        if (!isAllowedScope(scope)) return List.of();
         refreshIfStale();
-        return metaCache.getOrDefault(scope, Collections.emptyList());
+        return metaCache.getOrDefault(scope, List.of());
     }
 
-    /**
-     * 读取指定 skill 的完整 SKILL.md 内容。
-     *
-     * @param scope "puppet-node" 或 "platform"
-     * @param name  skill 目录名（如 "recon-basic-info"）
-     * @return SKILL.md 全文，文件不存在时返回 null
-     */
+    /** 返回 catalog 级健康检查结果，包括悬空依赖、重复 ID 和依赖环。 */
+    public List<SkillInspection> health(String scope) {
+        if (!isAllowedScope(scope)) return List.of();
+        refreshIfStale();
+        return inspectionCache.getOrDefault(scope, List.of());
+    }
+
+    /** 立即检查单个 skill；不使用 catalog 缓存。 */
+    public SkillInspection inspectSkill(String scope, String name) {
+        if (!isAllowedScope(scope) || !isValidSkillName(name)) {
+            return new SkillInspection(scope, name, false, null,
+                    List.of(SkillValidationIssue.error("skill", "scope 或 name 非法")));
+        }
+        return manifestService.inspect(resolveSkillDir(scope, name), scope);
+    }
+
+    /** 返回单项和 catalog 级校验均通过的 descriptor；无效或不存在时返回 null。 */
+    public SkillDescriptor getDescriptor(String scope, String name) {
+        SkillInspection inspection = inspectRuntimeSkill(scope, name);
+        return inspection.valid() ? inspection.descriptor() : null;
+    }
+
+    /** 管理接口读取完整 SKILL.md；不代表该 skill 可运行。 */
     public String getSkillContent(String scope, String name) {
-        if (!isAllowedScope(scope)) return null;
-        if (name == null || name.isBlank()) return null;
-        Path skillFile = resolveSkillFile(scope, name);
-        if (!Files.exists(skillFile)) return null;
+        if (!isAllowedScope(scope) || !isValidSkillName(name)) return null;
+        Path skillFile = resolveSkillDir(scope, name).resolve(SkillManifestService.SKILL_FILE);
+        Path skillDir = skillFile.getParent();
+        if (skillDir == null || Files.isSymbolicLink(skillDir)
+                || Files.isSymbolicLink(skillFile) || !Files.isRegularFile(skillFile)) return null;
         try {
             return Files.readString(skillFile);
         } catch (IOException e) {
-            log.warn("[SkillRegistry] 读取 skill 失败: scope={}, name={}, err={}", scope, name, e.getMessage());
+            log.warn("[SkillRegistry] 读取 skill 失败: scope={}, name={}, err={}",
+                    scope, name, e.getMessage());
             return null;
         }
     }
 
-    /**
-     * 使缓存立即失效，下次调用 listSkills 时重新扫描 VFS。
-     * 在 save / delete 操作后调用。
-     */
+    /** 运行时读取。manifest 无效、非 published 或 disabled 时一律拒绝。 */
+    public String getEnabledSkillContent(String scope, String name) {
+        String content = getSkillContent(scope, name);
+        if (content == null) return null;
+        SkillInspection inspection = inspectRuntimeSkill(scope, name);
+        if (!inspection.valid() || inspection.descriptor() == null
+                || !inspection.descriptor().isPublishedAndEnabled()) return null;
+        return content;
+    }
+
+    public boolean isSkillEnabled(String scope, String name) {
+        return getEnabledSkillContent(scope, name) != null;
+    }
+
     public void invalidate() {
         metaCache.clear();
+        inspectionCache.clear();
         cacheFilledAt.set(0L);
     }
 
-    /**
-     * 返回 VFS 中 skills/{scope} 的根目录路径。
-     *
-     * @throws IllegalArgumentException 当 scope 不在 {@link #ALLOWED_SCOPES} 中时；
-     *                                  这道防护防止 scope="../foo" 把根目录穿越到 VFS 之外。
-     */
     public Path getSkillsRoot(String scope) {
         validateScope(scope);
         return Path.of(LeoConfig.getVfsPath()).resolve(SKILLS_DIR).resolve(scope).normalize();
     }
 
-    /** 校验 scope 是否在允许列表中，否则抛 IllegalArgumentException。 */
     public static void validateScope(String scope) {
         if (!ALLOWED_SCOPES.contains(scope)) {
-            throw new IllegalArgumentException("非法 scope: " + scope
-                    + "（仅允许 " + ALLOWED_SCOPES + "）");
+            throw new IllegalArgumentException("非法 scope: " + scope + "（仅允许 " + ALLOWED_SCOPES + "）");
         }
     }
 
-    /** 静默版校验：用于 list/getContent 这类返回空集合即可的入口，避免无谓抛错。 */
-    private static boolean isAllowedScope(String scope) {
-        return scope != null && ALLOWED_SCOPES.contains(scope);
+    /** 名称与 skill-creator 规范一致：小写字母、数字和连字符，最长 64。 */
+    public static boolean isValidSkillName(String name) {
+        return name != null && SKILL_NAME_PATTERN.matcher(name.trim()).matches();
     }
 
-    // ── 内部逻辑 ──────────────────────────────────────────────────────────────
-
-    private void refreshIfStale() {
-        long now = System.currentTimeMillis();
-        if (now - cacheFilledAt.get() <= TTL_MS) return;
-        // 串行化刷新：第一个抢到锁的线程扫盘填缓存，其余线程在锁释放后看到新时间戳直接返回。
-        synchronized (refreshLock) {
-            // double-check：可能在等锁期间已被另一线程刷新
-            if (System.currentTimeMillis() - cacheFilledAt.get() <= TTL_MS) return;
-            for (String scope : ALLOWED_SCOPES) {
-                metaCache.put(scope, scanScope(scope));
-            }
-            cacheFilledAt.set(System.currentTimeMillis());
-        }
-    }
-
-    private List<SkillMeta> scanScope(String scope) {
-        Path scopeDir = getSkillsRoot(scope);
-        if (!Files.isDirectory(scopeDir)) return Collections.emptyList();
-
-        // 用 SafeConstructor 防止 YAML 反序列化任意类（!!java.lang.* 标签）。
-        // frontmatter 只需要 Map/List/标量，没有自定义类型需求。
-        Yaml yaml = new Yaml(new SafeConstructor(new LoaderOptions()));
-        List<SkillMeta> result = new ArrayList<>();
-        try (Stream<Path> dirs = Files.list(scopeDir)) {
-            dirs.filter(Files::isDirectory)
-                .sorted()
-                .forEach(skillDir -> {
-                    Path skillFile = skillDir.resolve(SKILL_FILE);
-                    if (!Files.isRegularFile(skillFile)) return;
-                    String skillName = skillDir.getFileName().toString();
-                    Map<String, Object> fm = parseFrontmatter(skillFile, yaml);
-                    String description = fm != null ? asString(fm.get("description")) : null;
-                    Object enabledVal  = fm != null ? fm.get("enabled") : null;
-                    // 默认启用；只有明确写 enabled: false 时才禁用
-                    boolean enabled = !Boolean.FALSE.equals(enabledVal);
-                    List<String> tags = fm != null ? extractTags(fm.get("tags")) : Collections.emptyList();
-                    int fileCount = countSkillFiles(skillDir);
-                    result.add(new SkillMeta(scope, skillName, description, enabled, tags, fileCount));
-                });
-        } catch (IOException e) {
-            log.warn("[SkillRegistry] 扫描 scope 失败: scope={}, err={}", scope, e.getMessage());
-        }
-        return Collections.unmodifiableList(result);
-    }
-
-    /**
-     * 统计 skill 目录下文件数（递归，跳过隐藏文件和符号链接）。
-     * 用于 UI 展示"多文件 skill"标记，对内容加载性能不敏感。
-     */
-    private static int countSkillFiles(Path skillDir) {
-        if (!Files.isDirectory(skillDir)) return 0;
-        try (Stream<Path> stream = Files.walk(skillDir)) {
-            return (int) stream
-                    .filter(Files::isRegularFile)
-                    .filter(p -> !p.getFileName().toString().startsWith("."))
-                    .count();
-        } catch (IOException e) {
-            return 1;
-        }
-    }
-
-    private static String asString(Object value) {
-        return value == null ? null : value.toString();
-    }
-
-    /**
-     * 把 frontmatter 的 tags 字段规范化成 List&lt;String&gt;。支持 YAML 数组、逗号分隔字符串、
-     * 单一字符串等常见写法，未识别格式回退为空列表。
-     */
-    @SuppressWarnings("unchecked")
-    private static List<String> extractTags(Object raw) {
-        if (raw == null) return Collections.emptyList();
-        if (raw instanceof List<?> list) {
-            List<String> out = new ArrayList<>(list.size());
-            for (Object item : list) {
-                if (item == null) continue;
-                String s = item.toString().trim();
-                if (!s.isEmpty()) out.add(s);
-            }
-            return Collections.unmodifiableList(out);
-        }
-        if (raw instanceof String s) {
-            List<String> out = new ArrayList<>();
-            for (String token : s.split(",")) {
-                String t = token.trim();
-                if (!t.isEmpty()) out.add(t);
-            }
-            return Collections.unmodifiableList(out);
-        }
-        return Collections.emptyList();
-    }
-
-    /**
-     * 用 SnakeYAML 解析 SKILL.md 的 frontmatter，返回字段 Map。
-     * 文件不存在、无 frontmatter 或解析失败时返回 null。
-     *
-     * <p>使用逐行扫描定位闭合 ---，避免误匹配 Markdown 正文中的水平线（--- 是合法 HR 语法）。
-     */
-    @SuppressWarnings("unchecked")
-    private Map<String, Object> parseFrontmatter(Path skillFile, Yaml yaml) {
-        try {
-            String content = Files.readString(skillFile);
-            if (!content.startsWith("---")) return null;
-
-            // 逐行扫描，找到第一个单独占一行且内容为 --- 的闭合分隔符
-            String[] lines = content.split("\n", -1);
-            int closeLineIdx = -1;
-            for (int i = 1; i < lines.length; i++) {
-                if (lines[i].trim().equals("---")) {
-                    closeLineIdx = i;
-                    break;
-                }
-            }
-            if (closeLineIdx < 0) {
-                log.warn("[SkillRegistry] frontmatter 缺少闭合分隔符: {}", skillFile);
-                return null;
-            }
-
-            String fmYaml = String.join("\n",
-                    java.util.Arrays.copyOfRange(lines, 1, closeLineIdx));
-            try {
-                return yaml.load(fmYaml);
-            } catch (RuntimeException yamlErr) {
-                // SnakeYAML 抛 YAMLException 等运行时异常，捕获后告警，避免拖垮 scanScope
-                log.warn("[SkillRegistry] frontmatter 解析失败: file={}, err={}", skillFile, yamlErr.getMessage());
-                return null;
-            }
-        } catch (IOException e) {
-            log.warn("[SkillRegistry] frontmatter 读取失败: file={}, err={}", skillFile, e.getMessage());
-            return null;
-        }
-    }
-
-    /**
-     * 把 SKILL.md 的 frontmatter 段剥掉，仅返回正文。供 AI 工具调用使用，
-     * 避免 enabled / tags / description 这类元数据污染上下文。
-     *
-     * <p>语义：与 {@link #parseFrontmatter} 共用同一套分隔符识别规则。
-     * 没有 frontmatter（不以 --- 开头或缺少闭合分隔符）时原样返回。
-     */
     public static String stripFrontmatter(String content) {
-        if (content == null) return null;
-        if (!content.startsWith("---")) return content;
+        if (content == null || !content.startsWith("---")) return content;
         String[] lines = content.split("\n", -1);
         int closeLineIdx = -1;
         for (int i = 1; i < lines.length; i++) {
@@ -286,15 +160,158 @@ public class SkillRegistryService {
             }
         }
         if (closeLineIdx < 0) return content;
-        // 跳过闭合 --- 之后所有前导空行，让正文从第一段实际内容开始
         int bodyStart = closeLineIdx + 1;
         while (bodyStart < lines.length && lines[bodyStart].isBlank()) bodyStart++;
-        if (bodyStart >= lines.length) return "";
-        return String.join("\n",
+        return bodyStart >= lines.length ? "" : String.join("\n",
                 java.util.Arrays.copyOfRange(lines, bodyStart, lines.length));
     }
 
-    private Path resolveSkillFile(String scope, String name) {
-        return getSkillsRoot(scope).resolve(name).resolve(SKILL_FILE).normalize();
+    private void refreshIfStale() {
+        long now = System.currentTimeMillis();
+        if (now - cacheFilledAt.get() <= TTL_MS) return;
+        synchronized (refreshLock) {
+            if (System.currentTimeMillis() - cacheFilledAt.get() <= TTL_MS) return;
+            Map<String, List<SkillInspection>> scanned = new LinkedHashMap<>();
+            for (String scope : ALLOWED_SCOPES) scanned.put(scope, scanScope(scope));
+            Map<String, List<SkillInspection>> validated = validateCatalog(scanned);
+            for (String scope : ALLOWED_SCOPES) {
+                List<SkillInspection> inspections = validated.getOrDefault(scope, List.of());
+                inspectionCache.put(scope, inspections);
+                metaCache.put(scope, toMeta(scope, inspections));
+            }
+            cacheFilledAt.set(System.currentTimeMillis());
+        }
+    }
+
+    private List<SkillInspection> scanScope(String scope) {
+        Path scopeDir = getSkillsRoot(scope);
+        if (!Files.isDirectory(scopeDir)) return List.of();
+        List<SkillInspection> result = new ArrayList<>();
+        try (Stream<Path> dirs = Files.list(scopeDir)) {
+            dirs.filter(Files::isDirectory)
+                    .filter(path -> !Files.isSymbolicLink(path))
+                    .sorted()
+                    .forEach(skillDir -> result.add(manifestService.inspect(skillDir, scope)));
+        } catch (IOException e) {
+            log.warn("[SkillRegistry] 扫描 scope 失败: scope={}, err={}", scope, e.getMessage());
+        }
+        return List.copyOf(result);
+    }
+
+    /**
+     * 运行时必须同时通过当前文件校验和 catalog 级校验。前者确保 enabled/status 等
+     * 立即生效，后者阻止重复 ID、悬空依赖和依赖环被直接激活。
+     */
+    private SkillInspection inspectRuntimeSkill(String scope, String name) {
+        SkillInspection current = inspectSkill(scope, name);
+        if (!current.valid()) return current;
+
+        refreshIfStale();
+        SkillInspection catalog = inspectionCache.getOrDefault(scope, List.of()).stream()
+                .filter(item -> name.equals(item.name()))
+                .findFirst()
+                .orElse(null);
+        if (catalog == null) {
+            return new SkillInspection(scope, name, false, current.descriptor(),
+                    List.of(SkillValidationIssue.error("skill", "skill 尚未进入有效 catalog")));
+        }
+        return catalog.valid() ? current : catalog;
+    }
+
+    private Map<String, List<SkillInspection>> validateCatalog(
+            Map<String, List<SkillInspection>> scanned) {
+        Map<String, Integer> idCounts = new HashMap<>();
+        for (List<SkillInspection> values : scanned.values()) {
+            for (SkillInspection inspection : values) {
+                String id = inspection.descriptor() != null ? inspection.descriptor().id() : null;
+                if (id != null) idCounts.merge(id, 1, Integer::sum);
+            }
+        }
+
+        Map<String, List<SkillInspection>> result = new LinkedHashMap<>();
+        for (Map.Entry<String, List<SkillInspection>> scopeEntry : scanned.entrySet()) {
+            String scope = scopeEntry.getKey();
+            Map<String, SkillInspection> byName = new LinkedHashMap<>();
+            for (SkillInspection inspection : scopeEntry.getValue()) {
+                byName.put(inspection.name(), inspection);
+            }
+            List<SkillInspection> validated = new ArrayList<>();
+            for (SkillInspection inspection : scopeEntry.getValue()) {
+                List<SkillValidationIssue> issues = new ArrayList<>(inspection.issues());
+                SkillDescriptor descriptor = inspection.descriptor();
+                if (descriptor != null) {
+                    if (descriptor.id() != null && idCounts.getOrDefault(descriptor.id(), 0) > 1) {
+                        issues.add(SkillValidationIssue.error("manifest.id",
+                                "稳定 ID 在 catalog 中重复: " + descriptor.id()));
+                    }
+                    for (String dependency : descriptor.requiredSkills()) {
+                        if (!byName.containsKey(dependency)) {
+                            issues.add(SkillValidationIssue.error("manifest.requires.skills",
+                                    "依赖不存在: " + dependency));
+                        }
+                    }
+                    for (String next : descriptor.next()) {
+                        if (!byName.containsKey(next)) {
+                            issues.add(SkillValidationIssue.error("manifest.next",
+                                    "后续 skill 不存在: " + next));
+                        }
+                    }
+                    if (hasDependencyCycle(inspection.name(), inspection.name(), byName, new HashSet<>())) {
+                        issues.add(SkillValidationIssue.error("manifest.requires.skills", "存在循环依赖"));
+                    }
+                }
+                boolean valid = issues.stream().noneMatch(
+                        issue -> issue.severity() == SkillValidationIssue.Severity.ERROR);
+                validated.add(new SkillInspection(scope, inspection.name(), valid, descriptor, issues));
+            }
+            result.put(scope, List.copyOf(validated));
+        }
+        return result;
+    }
+
+    private static boolean hasDependencyCycle(String origin, String current,
+                                              Map<String, SkillInspection> byName,
+                                              Set<String> visiting) {
+        SkillInspection inspection = byName.get(current);
+        if (inspection == null || inspection.descriptor() == null || !visiting.add(current)) return false;
+        for (String dependency : inspection.descriptor().requiredSkills()) {
+            if (origin.equals(dependency)) return true;
+            if (hasDependencyCycle(origin, dependency, byName, visiting)) return true;
+        }
+        visiting.remove(current);
+        return false;
+    }
+
+    private List<SkillMeta> toMeta(String scope, List<SkillInspection> inspections) {
+        List<SkillMeta> result = new ArrayList<>();
+        for (SkillInspection inspection : inspections) {
+            Path skillDir = resolveSkillDir(scope, inspection.name());
+            result.add(new SkillMeta(scope, inspection.name(), inspection.descriptor(),
+                    countSkillFiles(skillDir), inspection.valid(), inspection.issues()));
+        }
+        return Collections.unmodifiableList(result);
+    }
+
+    private static int countSkillFiles(Path skillDir) {
+        if (!Files.isDirectory(skillDir)) return 0;
+        try (Stream<Path> stream = Files.walk(skillDir)) {
+            return (int) stream.filter(Files::isRegularFile)
+                    .filter(path -> !Files.isSymbolicLink(path))
+                    .filter(path -> !path.getFileName().toString().startsWith("."))
+                    .count();
+        } catch (IOException e) {
+            return 0;
+        }
+    }
+
+    private Path resolveSkillDir(String scope, String name) {
+        Path scopeRoot = getSkillsRoot(scope);
+        Path skillDir = scopeRoot.resolve(name.trim()).normalize();
+        if (!skillDir.startsWith(scopeRoot)) throw new IllegalArgumentException("skill 路径越界: " + name);
+        return skillDir;
+    }
+
+    private static boolean isAllowedScope(String scope) {
+        return scope != null && ALLOWED_SCOPES.contains(scope);
     }
 }
